Get activity logs only for owner or admin